assets/static/_css/indypy/indypy.css
/* Keep footer at bottom of viewport */

html,
body {
    height: 100%;
}
#page {
    position: relative;
    min-height: 100%;
}
#main {
    padding-bottom: 213px; /* height of footer */
}
footer {
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    overflow: hidden;
}

.thanks {
    font-size: .8em;
}
.thanks a,
.thanks a:hover {
    color: #fff;
}

/* Footer sponsor logo stuff */
footer .sponsor-logos-footer {
    width: 33%;
    margin: 0 auto;
}

footer .sponsor-logos-footer ol {
    display: flex;
    align-items: center;
    margin-bottom: 0;
}

footer .sponsor-logos-footer li {
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 0;
    margin-left: 1rem;
    margin-right: 1rem;
    list-style-type: none;
    display: inline;
}

footer .sponsor-logos-footer a img {
    width: 100%;
    padding: 0 1rem;
}

/* Prevent side scrolling */

#page {
    width: 100vw;
    overflow-x: hidden;
}

/* Mobile specific selectors */

.touch body .no-touch {
    display: none;
}
.no-touch body .touch {
    display: none;
}

/* Default styling */

body {
    background-color: #FFF;
    color: #636363;
    font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 2rem;
}
h1, h2, h3 {
    font-family: "Merriweather", "Georgia", "Times New Roman", serif;
    font-weight: 700;
    letter-spacing: 0;
}
h1 {
    font-size: 3.2rem;
}
h2 {
    font-size: 2.6rem;
}
h3 {
    font-size: 2.3rem;
    text-transform: uppercase;
    letter-spacing: 0.05em;
}
h4 {
    margin-bottom: 1ex;
    font-size: 2.3rem;
    font-weight: 700;
    letter-spacing: 0;
}
a {
    color: #7100FF;
    cursor: pointer;
}
a:hover {
    color: #0C7BF4;
}
input,
select {
    margin-top: 0;
    margin-bottom: 0;
}
label {
    font-weight: normal;
}
*:focus {
    outline: none;
}

@media (min-width: 750px) {
    body {
        font-size: 2rem;
    }
    h1 {
        font-size: 4.0rem;
    }
    h2 {
        font-size: 3.2rem;
    }
    h3 {
        font-size: 2.0rem;
    }
}

::-webkit-input-placeholder { /* Chrome/Opera/Safari */
  color: #D0D0D0;
}
::-moz-placeholder { /* Firefox 19+ */
  color: #D0D0D0;
}
:-ms-input-placeholder { /* IE 10+ */
  color: #D0D0D0;
}
:-moz-placeholder { /* Firefox 18- */
  color: #EAEAEA;
}

a.ext:after {
    content: "\f08e";
    display: inline-block;
    margin-left: 0.3em;
    font-family: FontAwesome;
    text-decoration: none;
}

.caps {
    text-transform: uppercase;
    letter-spacing: 0.1em;
}

.fade.ng-hide {
    opacity: 0;
}
.fade.ng-hide-remove,
.fade.ng-hide-add {
    transition: all linear 500ms;
}

.fade-up {
    opacity: 0;
    transform: translateY(50px);
    transition: all 500ms cubic-bezier(0.6, 0.6, 0.3, 1) 500ms;
}
.fade-up.in-viewed {
    opacity: 1;
    transform: translateY(0);
}

.background {
    position: relative;
}
.background .image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition: opacity 300ms;
}
.background .image.loaded {
    opacity: 1;
}

header {
    position: absolute;
    width: 100%;
    height: 60px;
    background-color: #161616;
    color: #FFF;
    z-index: 10;
}
header .logo {
    display: block;
    position: absolute;
    top: 0;
    left: 50%;
    width: 200px;
    height: 40px;
    margin: 0 0 0 -100px;
    padding-top: 14px;
}
header .logo a {
    display: block;
    width: 100%;
    height: 100%;
    color: inherit !important;
    text-decoration: none;
}
header nav {
    display: none;
}
/* ... */

